agregando un botón para eliminar notas y agregando la logica en js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app">
+        <h1>Bienvenida/o a tus tareas diarias 📝</h1>
         <textarea id="noteInput" placeholder="Escribe una nota..."></textarea>
         <button onclick="addNote()">Agregar Nota</button>
         <div id="noteContainer"></div>
